# vpdw_sim

./: CMakeLists.txt  README.md  package.xml
include/vpdw_sim/: biped_robot.h
launch/: adaptive_walking.launch  ctc_walking.launch  walking.launch
msg/: Terrain.msg
param/: biped.yaml
rviz/: biped.rviz
src/: adaptive_controller.cpp  biped_robot.cpp  controller.cpp  ctc_controller.cpp  newtraj1.txt  plot_walking.cpp  plotlimitcycle.cpp  traj.txt  walker.cpp
src/traj/: newtraj.py  traj.txt
trajectory/: newtraj.txt
